--- a/Service.Client/App.config
+++ b/Service.Client/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <system.serviceModel>
+    <client>
+      <endpoint address="http://localhost:60423/ApciService.svc"
+                binding="basicHttpBinding"
+                contract="Services.Std.Interface.IAPCIService" />
+      <endpoint address="http://localhost:60423/ESWService.svc"
+                binding="basicHttpBinding"
+                contract="Services.Std.Interface.IESWService" />
+    </client>
+  </system.serviceModel>
 </configuration>
