--- a/Service.Proxies/Service.Proxies.csproj
+++ b/Service.Proxies/Service.Proxies.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApciClient.cs" />
-    <Compile Include="ESWService.cs" />
+    <Compile Include="ESWClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
