Binding and behavior examples implemented

--- a/Service.Client/App.config
+++ b/Service.Client/App.config
@@ -12,5 +12,10 @@
                 binding="basicHttpBinding"
                 contract="Services.Std.Interface.IESWService" />
     </client>
+    <bindings>
+      <basicHttpBinding>
+        <binding sendTimeout="00:00:05" maxReceivedMessageSize="2000000"/>
+      </basicHttpBinding>
+    </bindings>
   </system.serviceModel>
 </configuration>
