--- a/Service.Host/Web.config
+++ b/Service.Host/Web.config
@@ -31,12 +31,19 @@
         <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex" />
       </service>
     </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding sendTimeout="00:00:05" maxReceivedMessageSize="2000000"/>
+      </basicHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="" >
           <!-- Add the following element to your service behavior configuration. -->
           <serviceMetadata httpGetEnabled="true" />
+          <!--<serviceDebug includeExceptionDetailInFaults="true"/>-->
         </behavior>
+        
       </serviceBehaviors>
     </behaviors>
     <!--<behaviors>
